--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dotenv": "^16.0.3",
+		"filepond": "^4.30.4",
+		"filepond-plugin-file-validate-type": "^1.2.8",
 		"mongoose": "^6.9.0",
-		"dotenv": "^16.0.3"
+		"svelte-filepond": "^0.2.0"
 	}
 }
