--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "omr",
+	"name": "OwlManRunning",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -16,9 +16,9 @@
 	"devDependencies": {
 		"@picocss/pico": "^1.5.7",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-node": "^1.1.4",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^1.0.3",
+		"@sveltejs/adapter-node": "^1.2.0",
+		"@sveltejs/kit": "^1.8.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -29,7 +29,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"typescript": "^4.9.5",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
