--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/adapter-node": "^1.2.0",
 		"@sveltejs/kit": "^1.8.3",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -39,6 +40,7 @@
 		"filepond": "^4.30.4",
 		"filepond-plugin-file-validate-type": "^1.2.8",
 		"mongoose": "^6.9.0",
-		"svelte-filepond": "^0.2.0"
+		"svelte-filepond": "^0.2.0",
+		"uuid": "^9.0.0"
 	}
 }
