--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "OwlManRunning",
+	"name": "owl-man-running",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -18,7 +18,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/adapter-node": "^1.2.0",
-		"@sveltejs/kit": "^1.8.3",
+		"@sveltejs/kit": "^1.8.4",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -27,20 +27,17 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.5",
-		"vite": "^4.0.0",
+		"vite": "^4.1.4",
 		"vitest": "^0.25.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"dotenv": "^16.0.3",
-		"filepond": "^4.30.4",
-		"filepond-plugin-file-validate-type": "^1.2.8",
 		"mongoose": "^6.9.0",
-		"svelte-filepond": "^0.2.0",
 		"uuid": "^9.0.0"
 	}
 }
