--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/adapter-node": "^1.2.0",
 		"@sveltejs/kit": "^1.8.4",
+		"@types/amqplib": "^0.10.1",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -36,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"amqplib": "^0.10.3",
 		"dotenv": "^16.0.3",
 		"mongoose": "^6.9.0",
 		"uuid": "^9.0.0"
